[STYLE] Perubahan terhadap style

--- a/index.html
+++ b/index.html
@@ -3,16 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Kota Bandung</title>
+
+    <!-- css -->
+    <link rel="stylesheet" href="asset/css/style.css" />
+
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <!-- Konten header website -->
-      <h1>Bandung</h1>
-      <p>
-        Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu
-        kota provinsi tersebut.
-      </p>
+      <div class="jumbotron">
+        <h1>Bandung</h1>
+        <p>
+          Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi
+          ibu kota provinsi tersebut.
+        </p>
+      </div>
       <nav>
         <ul>
           <li><a href="#sejarah">Sejarah</a></li>
@@ -25,9 +38,13 @@
     <main>
       <!-- Konten utama website -->
       <div id="content">
-        <article id="sejarah">
+        <article id="sejarah" class="card">
           <h2>Sejarah</h2>
-          <img src="asset/img/history.jpg" alt="Sejarah" />
+          <img
+            src="asset/img/history.jpg"
+            alt="Sejarah"
+            class="featured-image"
+          />
           <p>
             Kata Bandung berasal dari kata bendung atau bendungan karena
             terbendungnya sungai Citarum oleh lava Gunung Tangkuban Parahu yang
@@ -51,9 +68,13 @@
           </p>
         </article>
 
-        <article id="geografis">
+        <article id="geografis" class="card">
           <h2>Geografis</h2>
-          <img src="asset/img/geografis.jpg" alt="geografis" />
+          <img
+            src="asset/img/geografis.jpg"
+            alt="geografis"
+            class="featured-image"
+          />
           <p>
             Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi
             wilayahnya bagaikan sebuah mangkok raksasa,[9] secara geografis kota
@@ -73,7 +94,7 @@
           </p>
         </article>
 
-        <article id="wisata">
+        <article id="wisata" class="card">
           <h2>Wisata</h2>
           <p>
             Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi
@@ -85,7 +106,11 @@
 
           <section>
             <h3>Farm House Lembang</h3>
-            <img src="asset/img/farm-house.jpg" alt="farm-house" />
+            <img
+              src="asset/img/farm-house.jpg"
+              alt="farm-house"
+              class="featured-image"
+            />
             <p>
               Berada di jalur utama Bandung-Lembang, Farm House menjadi objek
               wisata yang tidak pernah sepi pengunjung. Selain karena letaknya
@@ -96,7 +121,11 @@
 
           <section>
             <h3>Observatorium Bosscha</h3>
-            <img src="asset/img/bosscha.jpg" alt="bosscha" />
+            <img
+              src="asset/img/bosscha.jpg"
+              alt="bosscha"
+              class="featured-image"
+            />
             <p>
               Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss,
               Schmidt Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan
@@ -114,7 +143,7 @@
       </div>
 
       <aside>
-        <article>
+        <article class="profile card">
           <header>
             <h2>Kota Bandung</h2>
             <p>Kota Kembang Paris van Java</p>
