--- a/pages/materi.html
+++ b/pages/materi.html
@@ -266,15 +266,17 @@
     <br />
 
     <!-- Input -->
-    <div>
-      <label for="email">Email</label><br />
-      <input type="email" id="email" placeholder="Email" required />
-    </div>
-    <div>
-      <label for="password">Password</label><br />
-      <input type="password" id="password" placeholder="Password" required />
-    </div>
-
+    <form method="post">
+      <div>
+        <label for="email">Email</label><br />
+        <input type="email" id="email" placeholder="Email" required />
+      </div>
+      <div>
+        <label for="password">Password</label><br />
+        <input type="password" id="password" placeholder="Password" required />
+      </div>
+      <button type="submit">Submit</button>
+    </form>
 
   </body>
 </html>
